--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="plugin/introJS/introjs.css">
     <!-- ICONOS -->
     <link type="image/png" sizes="16x16" rel="icon" href="img/favicon.png">
-    <!--<link rel="stylesheet" href="css/icon/font-awesome-4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="css/icon/font-awesome-4.7.0/css/font-awesome.min.css">
     <title> Golden Memories </title>
 </head>
 
