--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ICONOS -->
     <link type="image/png" sizes="16x16" rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/icon/font-awesome-4.7.0/css/font-awesome.min.css">
-    <title> Golden Memories </title>
+    <title> Golden Memories Game</title>
 </head>
 
 <body>
