--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
             <div id="modal-score-body" class="modal-score-body">
                 <div class='tabla'>
                     <label class='titlePtos'>Nombre</label>
-                    <label class='titlePtos'>Nivel</label>
                     <label class='titlePtos'>Puntos</label>
                     <label class='titlePtos'>Tiempo</label>
                 </div>
                 <div class="tabla">
                     <input id="nombreJugador" type="text">
-                    <label id="nivelPartida"></label>
                     <label id="puntosPartida"></label>
                     <label id="tiempoPartida"></label>
                 </div>
@@ -76,7 +74,7 @@
             <div id="modalTableScoreBody" class="modal-tscore-body">
                 <div id="tPartidas" class="modal-tscore-body"></div>
                 <div class='footer'>
-                   <!-- <button id='limpiar' class='btn cancel'>Limpiar historial partidas</button> -->
+                    <button id='limpiar' class='btn cancel'>Limpiar historial partidas</button> 
                     <button id='cerrar' class='btn cancel'>Cerrar</button>
                 </div>
             </div>
