--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button id="reiniciar" class="btn"> Reiniciar </button>
                    <!-- <button id="facil" class="btn"> Facil </button>
                     <button id="medio" class="btn"> Medio </button>
-                    <button id="dificil" class="btn"> Dificil </button>-->
+                    <button id="Difícil" class="btn"> Difícil </button>-->
                 </div>
                 
                 <div id="otherBtn" class="modal-body">
